# mini-metars

./: README.md  index.html  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.ts
src/: App.tsx  Metar.tsx  logging.ts  tauri.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: awc.rs  main.rs  profiles.rs  settings.rs  utils.rs  weather_cache.rs
