[package]
name = "mini-metars"
version = "0.0.1"
description = "A Tauri App"
authors = ["Ken Greim"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.24", features = [] }
tauri-plugin-shell = "2.0.0-beta.9"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
anyhow = "1.0.86"
flate2 = "1.0.30"
reqwest = { version = "0.12.5", features = ["json"] }
tokio = "1.39.1"
chrono = { version = "0.4.38", features = ["serde"] }
