[package]
name = "mini-metars"
version = "0.0.1"
description = "A small on-top display for METARs"
authors = ["Ken Greim"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.24", features = [] }
tauri-plugin-shell = "2.0.0-beta.9"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
anyhow = "1.0.86"
flate2 = "1.0.30"
reqwest = { version = "0.12.5", features = ["json"] }
tokio = "1.39.1"
chrono = { version = "0.4.38", features = ["serde"] }

# Optimize for smaller binary size
[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true      # Remove debug symbols
